--- a/index.css
+++ b/index.css
@@ -1,7 +1,13 @@
 h1{
   padding: 1em;
+  padding-bottom: .5em;
   font-size: 2.5em;
 }
+
+h2{
+  padding-bottom: .5em;
+}
+
 
 table{
   display: inline-block;
