--- a/JSFiffle_Project1_CSS.css
+++ b/JSFiffle_Project1_CSS.css
@@ -7,7 +7,7 @@ h1 {
 
 body {
   text-align: center;
-  background-image: url("https://thedesignest.net/wp-content/uploads/2019/12/Cloud-White-Marble-Background.jpg");
+  background-image: url("https://us.123rf.com/450wm/nadiinko/nadiinko1808/nadiinko180800072/112037430-modern-simple-geometric-vector-seamless-pattern-with-gold-line-texture-on-white-background-light-abs.jpg?ver=6");
 }
 
 img{
