--- a/JSFiffle_Project1_CSS.css
+++ b/JSFiffle_Project1_CSS.css
@@ -7,7 +7,7 @@ h1 {
 
 body {
   text-align: center;
-  background-image: url("https://us.123rf.com/450wm/nadiinko/nadiinko1808/nadiinko180800072/112037430-modern-simple-geometric-vector-seamless-pattern-with-gold-line-texture-on-white-background-light-abs.jpg?ver=6");
+  background-image: url("http://ku.90sjimg.com/element_origin_min_pic/17/03/11/e0cdd867885eb0c8b02bbef9c0a78194.jpg");
 }
 
 img{
