--- a/video.css
+++ b/video.css
@@ -39,8 +39,6 @@ body{
 }
 
 
-
-
 div img{
   display: block;
   margin: 0px auto 10px auto;
@@ -49,4 +47,61 @@ div img{
 
 a{
   text-decoration: none;
+}
+
+
+iframe{
+	margin: 0px 60px 15px 15px ;
+}
+
+h1{
+	margin-bottom: 1em;
+}
+
+#benefits{
+	overflow: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#specific_benefits p{
+	text-indent: 20px;
+	line-height: 2em;
+	max-width: 1200px;
+	margin: 40px;
+	display:block;
+}
+
+#specific_benefits{
+	display: block;
+	margin: auto;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#specific_benefits blockquote, h2{
+	margin-left: auto;
+	margin-right: auto;
+}
+
+blockquote{
+	width: 20%;
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	padding: 15px;
+	float: left;
+	margin: 30px;
+}
+
+#content{
+	display: block;
+	max-width:1400px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#space{
+	display: block;
+	margin: 2em;
 }
